# learn-rust

./: .gitignore  README.md  commands.md  conceptos.md
basics/first-project/src/: main.rs  procedures-functions.rs  random_info.rs  strings.rs  struct_impl_trait.rs
basics/hello-world/: main  main.rs
basics/hello-world-cargo/: Cargo.toml  info.txt  output.txt  util.py
basics/hello-world-cargo/src/: command-line-arguments.rs  const.rs  define-traits.rs  enum.rs  for.rs  hashMap.rs  hello-world.rs  if-else.rs  loop.rs  main.rs  modules.rs  oop.rs  options.rs  parser-json.rs  pass-reference.rs  random.rs  read-file.rs  reading-user-input.rs  string.rs  tuple-struct.rs  tuples.rs  util.rs  variables.rs  while.rs  write-file.rs
bdd/diesel_postgres/: .gitignore  Cargo.toml  README.md
bdd/diesel_postgres/src/: lib.rs  main.rs  models.rs  schemas.rs
examples/basics/: Cargo.toml
examples/basics/src/: adivinanza.rs  fibonacci.rs  main.rs  ownership.rs  temperatura.rs
intermedio/first-project/: .gitignore  Cargo.toml
intermedio/first-project/src/: array.rs  condition.rs  const_static.rs  data-types.rs  enums.rs  excepciones.rs  generics.rs  geo_map.rs  hashmap.rs  if_let.rs  iterators.rs  lib.rs  lifetime.rs  lifetime2.rs  limitando_impl_con_trait.rs  main.rs  manejo_errores.rs  match.rs  modules.rs  option_enum.rs  ownership_borrowing.rs  paths_anidados.rs  pattern_maching.rs  print_format.rs  reexportacion.rs  slice.rs  stack_heap.rs  string_slice.rs  strings.rs  struct.rs  struct_tuples.rs  trait.rs  tuples.rs  vector_diferentes_tipo.rs  vectores.rs
intermedio/modular/: Cargo.toml
intermedio/modular/src/: main.rs
intermedio/modular/src/sound/: instrument.rs
