[package]
name = "hello-world-cargo"
version = "0.1.0"
authors = ["byron7cueva <byron7cueva@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.3"
regex = "1.3.9"
reqwest = "0.10.6"
tokio = { version = "0.2.21", features = ["macros"] }
serde = { version = "1.0.112", features = ["derive"] }
serde_json = "1.0.55"
serde_derive = "1.0.112"