[package]
name = "diesel_postgres"
version = "0.1.0"
authors = ["byron7cueva <byron7cueva@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
diesel = { version = "1.4.5", features = ["postgres"] }